--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,6 +15,6 @@
       "isolatedModules": true,
       "jsx": "react-jsx"
     },
-    "include": ["src"]
+    "include": ["src", "types"]
   }
   
