--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.0"
+    "typescript": "^4.9.0",
+    "react-chartjs-2": "^5.2.0",
+    "chart.js": "^4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
